--- a/views/mostrarUsuarios.ejs
+++ b/views/mostrarUsuarios.ejs
@@ -7,7 +7,7 @@
 	<title>EJERCICIO5</title>
 </head>
 <body>
-	<h1>Personajes historicos </h1>
+	<h1>Usuarios </h1>
 	<div class="contenedor">
 		<table>
 			<thead>
